--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -4,3 +4,9 @@
 listener 9001
 http_dir /www
 protocol websockets
+
+autosave_interval 1800
+#autosave_on_changes false
+persistence true
+persistence_file mosquitto.db
+persistence_location /data/
