--- a/balena/Dockerfile.wifi-connect.template
+++ b/balena/Dockerfile.wifi-connect.template
@@ -1,4 +1,4 @@
-FROM balenalib/%%RESIN_MACHINE_NAME%%-debian
+FROM balenalib/%%BALENA_MACHINE_NAME%%-debian
 
 RUN install_packages dnsmasq wireless-tools
 
