--- a/balena/Dockerfile.wifi.template
+++ b/balena/Dockerfile.wifi.template
@@ -1,14 +1,16 @@
-FROM balenalib/%%BALENA_MACHINE_NAME%%-debian
+FROM balenalib/%%BALENA_MACHINE_NAME%%-alpine
 
 RUN install_packages dnsmasq wireless-tools
 
 WORKDIR /usr/src/app
 
 RUN curl https://api.github.com/repos/balena-io/wifi-connect/releases/latest -s \
-    | grep -hoP 'browser_download_url": "\K.*%%RESIN_ARCH%%\.tar\.gz' \
+    | grep -ho 'browser_download_url": ".*%%RESIN_ARCH%%\.tar\.gz' \
+    | cut -d '"' -f 3 \
     | xargs -n1 curl -Ls \
     | tar -xvz -C /usr/src/app/
 
 COPY start.sh .
+COPY index.html ui/
 
 CMD ["bash", "start.sh"]
