--- a/balena/Dockerfile.wifi.template
+++ b/balena/Dockerfile.wifi.template
@@ -1,16 +1,13 @@
-FROM balenalib/%%BALENA_MACHINE_NAME%%-alpine
+FROM balenalib/%%BALENA_MACHINE_NAME%%-debian
 
 RUN install_packages dnsmasq wireless-tools
 
-WORKDIR /usr/src/app
-
-RUN curl https://api.github.com/repos/balena-io/wifi-connect/releases/latest -s \
+RUN curl -s https://api.github.com/repos/balena-io/wifi-connect/releases/latest \
     | grep -ho 'browser_download_url": ".*%%RESIN_ARCH%%\.tar\.gz' \
     | cut -d '"' -f 3 \
     | xargs -n1 curl -Ls \
-    | tar -xvz -C /usr/src/app/
+    | tar -xvz -C /usr/sbin/ ./wifi-connect
 
-COPY start.sh .
-COPY index.html ui/
+COPY redirect.html /www/index.html
 
-CMD ["bash", "start.sh"]
+CMD ["sh", "-c", "/usr/sbin/wifi-connect -u /www/ && sleep infinity"]
