--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - 9001:9001
     restart: always
     volumes:
-      - data:/data
+      - data:/data:rw
 
   wifi-connect:
     build:
@@ -19,11 +19,11 @@ services:
     network_mode: host
     labels:
       io.balena.features.dbus: 1
+    environment:
+      DBUS_SYSTEM_BUS_ADDRESS: unix:path=/host/run/dbus/system_bus_socket
     cap_add:
       - NET_ADMIN
     restart: always
-    environment:
-      PORTAL_SSID: Event Contribution
 
 volumes:
   data:
