--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,19 +11,20 @@ services:
     restart: always
     volumes:
       - data:/data:rw
-      - www:/www:rw
+      - www:/www:ro
 
   wifi-connect:
     build:
       context: balena
       dockerfile: Dockerfile.wifi.template
     network_mode: host
+    cap_add:
+      - NET_ADMIN
     labels:
       io.balena.features.dbus: 1
     environment:
       DBUS_SYSTEM_BUS_ADDRESS: unix:path=/host/run/dbus/system_bus_socket
-    cap_add:
-      - NET_ADMIN
+      UI_DIRECTORY: /www
     restart: always
     volumes:
       - www:/www:ro
