switch to bootstrap css framework

--- a/balena/Dockerfile.wifi.template
+++ b/balena/Dockerfile.wifi.template
@@ -2,12 +2,15 @@ FROM balenalib/%%BALENA_MACHINE_NAME%%-debian
 
 RUN install_packages dnsmasq wireless-tools
 
-WORKDIR /app/
+COPY *.html /www/
+COPY css/ /www/css/
+COPY js/ /www/js/
+RUN sed -i 's/window\.location\.port/9001/g' /www/js/functions.js
 
 RUN curl -s https://api.github.com/repos/balena-io/wifi-connect/releases/latest \
     | grep -ho 'browser_download_url": ".*%%RESIN_ARCH%%\.tar\.gz' \
     | cut -d'"' -f3 \
-    | xargs -n1 curl -Ls \
-    | tar -xz -C /app/
+    | xargs -n1 curl -Ls ./wifi-connect \
+    | tar -xz -C /usr/sbin/
 
-CMD ["sh", "-c", "/app/wifi-connect && sleep infinity"]
+CMD ["sh", "-c", "/usr/sbin/wifi-connect -u /www && sleep infinity"]
