--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - NET_ADMIN
     labels:
       io.balena.features.dbus: 1
+      io.balena.features.supervisor-api: 1
     environment:
       DBUS_SYSTEM_BUS_ADDRESS: unix:path=/host/run/dbus/system_bus_socket
     restart: always
