--- a/windows/mosquitto.conf
+++ b/windows/mosquitto.conf
@@ -2,7 +2,7 @@
 #protocol mqtt
 
 listener 9001
-http_dir /www/
+http_dir ../dist
 protocol websockets
 
 allow_anonymous true
@@ -11,4 +11,4 @@ autosave_interval 1800
 #autosave_on_changes false
 persistence true
 persistence_file mosquitto.db
-persistence_location /data/
+persistence_location .
