--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "rollup-plugin-terser": "^7.0.2",
     "paho-mqtt": "^1.1.0"
   },
+  "scripts": {
+    "build": "npx rollup -c"
+  },
   "private": true
 }
