--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "dependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.16.11",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-commonjs": "^21.1.0",
-    "@rollup/plugin-node-resolve": "^13.2.1",
-    "@rollup/plugin-typescript": "^8.3.2",
-    "core-js": "^3.19.0",
-    "rollup": "^2.70.2",
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.21.0",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.4.0",
+    "@rollup/plugin-typescript": "^11.0.0",
+    "core-js": "^3.29.0",
+    "html-minifier": "^4.0.0",
+    "paho-mqtt": "^1.1.0",
+    "rollup": "^3.17.3",
     "rollup-plugin-generate-html-template": "^1.7.0",
-    "rollup-plugin-html-minifier": "^2.0.0",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "paho-mqtt": "^1.1.0"
+    "tslib": "^2.5.0"
   },
   "scripts": {
     "build": "npx rollup -c"
