--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vanillaTemplates"]
 	path = vanillaTemplates
-	url = git@github.com:Tehes/vanillaTemplates.git
+	url = https://github.com/Tehes/vanillaTemplates.git
