--- a/renovate.json
+++ b/renovate.json
@@ -3,5 +3,19 @@
   "extends": [
     "config:js-app",
     "group:allNonMajor"
+  ],
+  "customManagers": [
+    {
+      "customType": "regex",
+      "managerFilePatterns": [
+        ".babelrc.json"
+      ],
+      "matchStrings": [
+        "\"corejs\":\\s*\"(?<currentValue>\\S+)\""
+      ],
+      "packageNameTemplate": "core-js",
+      "datasourceTemplate": "npm",
+      "versioningTemplate": "npm"
+    }
   ]
 }
